--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatble" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Hobbyist</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatble" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Hobbyist</title>
+  </head>
+  <style>
+    body {
+      background-color: white;
+      color: black;
+      text-align: center;
+    }
+  </style>
 
-    <body>
-        <h1>Hello World</h1>
-    </body>
-
+  <body>
+    <h1>Hello World</h1>
+    <h2><em>from Maruf</em></h2>
+  </body>
 </html>
