style: updated color

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
       color: black;
       text-align: center;
     }
+    .sender {
+      color: #888888;
+    }
   </style>
 
   <body>
     <h1>Hello World</h1>
-    <h2><em>from Maruf</em></h2>
+    <h2><em class="sender">from Maruf</em></h2>
   </body>
 </html>
