--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 
   <body>
-    <h1>Hello World</h1>
-    <h2><em>from Maruf</em></h2>
+    <h1>Hello World2</h1>
+    <h2><em>by Fahad</em></h2>
   </body>
 </html>
