--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatble" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hobbyist</title>
-  </head>
-  <style>
-    body {
-      background-color: white;
-      color: black;
-      text-align: center;
-    }
-    .sender {
-      color: #888888;
-    }
-  </style>
 
-  <body>
-    <h1>Hello World2</h1>
-    <h2><em>by Fahad</em></h2>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatble" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hobbyist</title>
+</head>
+<style>
+  body {
+    background-color: white;
+    color: black;
+    text-align: center;
+  }
+
+  .sender {
+    color: #888888;
+  }
+</style>
+
+<body>
+  <h1>Hello World 3</h1>
+  <h2><em>by Victoria</em></h2>
+</body>
+
 </html>
